tests/NormalTests/paczka1/fuzzy1/41150242.err
Error in line 11: mQUWp4kW S546 16,41
Error in line 7: mQUWp4kW S546 4,6
Error in line 2: zK3WR A280 23,2
Error in line 20: i6x8u11aPY S543 78,0
Error in line 28: A280 S543 68,4
Error in line 29: A280 S546 68,9
